compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static final EnumNameOverride valueOf(@org.jetbrains.annotations.NotNull() java.lang.String);//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static final EnumNameOverride[] values();//  values()

  private  EnumNameOverride();//  .ctor()

}
